fix: prevent default scrollbars on Windows (#77)

--- a/src/style.less
+++ b/src/style.less
@@ -212,7 +212,7 @@ input[type=email] {
 		justify-content: flex-start;
 		margin: 3rem -1rem;
 		padding: 0 1rem;
-		overflow: scroll;
+		overflow: auto;
 		scroll-behavior: smooth;
 
 		.feature {
